crates/native/src/pipeline/snapshots/mearie_native__pipeline__tests__union_partial_coverage_module.snap
---
source: crates/native/src/pipeline/mod.rs
expression: "& module.code"
---
type GetResult = import("./types.d.ts").GetResult;
declare module "$mearie" {
	export type RequiredAction = import("./types.d.ts").RequiredAction;
	export type GetResult = import("./types.d.ts").GetResult;
	export function graphql(artifact: "\n            query GetResult {\n                result {\n                    ... on Success {\n                        id\n                        value\n                    }\n                }\n            }\n        "): GetResult;
	export declare const schema: import("./types.d.ts").$Schema;
}
