crates/native/src/pipeline/snapshots/mearie_native__pipeline__tests__union_partial_coverage_runtime.snap
---
source: crates/native/src/pipeline/mod.rs
expression: "& runtime.code"
---
export const $GetResult = {
	name: "GetResult",
	body: "query GetResult {\n  result {\n    __typename\n    ... on Success {\n      __typename\n      id\n      value\n    }\n  }\n}",
	kind: "query",
	selections: [{
		kind: "Field",
		name: "result",
		type: "Result",
		selections: [{
			kind: "Field",
			name: "__typename"
		}, {
			kind: "InlineFragment",
			on: "Success",
			selections: [
				{
					kind: "Field",
					name: "__typename"
				},
				{
					kind: "Field",
					name: "id",
					type: "ID"
				},
				{
					kind: "Field",
					name: "value",
					type: "String"
				}
			]
		}]
	}]
};
export const artifactMap = { "\n            query GetResult {\n                result {\n                    ... on Success {\n                        id\n                        value\n                    }\n                }\n            }\n        ": $GetResult };
export const artifactByName = { "query:GetResult": $GetResult };
export const schema = { entities: {
	"Success": { keyFields: ["id"] },
	"Error": { keyFields: ["id"] }
} };
export const graphql = (artifact) => artifactMap[artifact];
graphql.query = (name) => artifactByName["query:" + name];
graphql.mutation = (name) => artifactByName["mutation:" + name];
graphql.subscription = (name) => artifactByName["subscription:" + name];
graphql.fragment = (name) => artifactByName["fragment:" + name];
graphql.enum = (value) => value;
